tests/fw_rules_tests/policies/label_expr_test_policy4.yaml

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: enable-from-ipblock-to-isolated-by-label-c
  namespace: default
spec:
  podSelector:
    matchLabels:
      podC: c
  policyTypes:
  - Ingress
  ingress:
    - from:
      - ipBlock:
          cidr: 0.0.0.0/0     # All destinations

---


apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: enable-from-ipblock-to-isolated-by-label-d
  namespace: default
spec:
  podSelector:
    matchLabels:
      podD: d
  policyTypes:
  - Ingress
  ingress:
    - from:
      - ipBlock:
          cidr: 0.0.0.0/0     # All destinations

---


apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: enable-from-ipblock-to-isolated-by-label-e
  namespace: default
spec:
  podSelector:
    matchLabels:
      podE: e
  policyTypes:
  - Ingress
  ingress:
    - from:
      - ipBlock:
          cidr: 0.0.0.0/0     # All destinations

---



apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-default-new
  namespace: default
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
